--- a/index.html
+++ b/index.html
@@ -1,60 +1,94 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Joe Higgs // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <link href="./assets/css/styles.css" rel="stylesheet" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Joe Higgs // Web Developer</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link href="./assets/css/styles.css" rel="stylesheet" />
+  </head>
 
-<body>
-  <!-- Navigation Bar -->
-  <header class="d-flex flex-wrap justify-content-center py-0 mb-0 border-bottom navBar">
-    <div class="col-lg-4 col-md-4 col-sm-8">
-      <a href="#about" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-        <svg class="bi me-2" width="40" height="32">
-          <use xlink:href="#bootstrap"></use>
-        </svg>
-        <span class="fs-4 name">Joe Higgs</span>
-      </a>
-    </div>
-    <div class="col-lg-8 col-md-8 col-sm-4">
-      <ul class="nav nav-pills justify-content-center justify-content-md-end">
-        <li class="nav-item navBar"></li>
-        <li class="nav-item">
-          <a class="nav-link" href="#about"><i class="fas fa-user"></i> About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#skills"><i class="fas fa-code"></i> Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#featured-project"><i class="fas fa-folder-open"></i> Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact"><i class="fas fa-envelope"></i> Contact Me</a>
-        </li>
-      </ul>
-    </div>
-  </header>
+  <body>
+    <!-- Navigation Bar -->
+    <header>
+      <nav class="navbar navbar-expand-lg custom-navbar">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="https://github.com/nonebula"
+            >Joe Higgs</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse navbar-light" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#about"
+                  ><i class="fas fa-user"></i>About Me</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#skills"
+                  ><i class="fas fa-code"></i>Skills</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#featured-project"
+                  ><i class="fas fa-folder-open"></i>Projects</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contact"
+                  ><i class="fas fa-envelope"></i>Contact Me</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
 
-  <!-- Jumbo -->
-  <div class="p-5 mb-4 bg-body-tertiary myhero">
-    <div class="container-fluid py-5 myjumbo">
-      <h1 class="display-5 fw-bold">Responsive Web Design at Your Fingertips!</h1>
-      <p class="col-md-12 fs-4 tagline">Search no longer. Click below to download my resume.</p>
-      <a href="./assets/downloads/cv.pdf" download class="btn btn-primary btn-lg jumboButton">Download Resume</a>
+    <!-- Jumbo -->
+    <div class="p-5 mb-4 bg-body-tertiary myhero">
+      <div class="container-fluid py-5 myjumbo">
+        <h1 class="display-5 fw-bold">
+          Responsive Web Design at Your Fingertips!
+        </h1>
+        <p class="col-md-12 fs-4 tagline">
+          Search no longer. Click below to download my resume.
+        </p>
+        <a
+          href="./assets/downloads/cv.pdf"
+          download
+          class="btn btn-primary btn-lg jumboButton"
+          >Download Resume</a
+        >
+      </div>
     </div>
-  </div>
 
-  <main class="page-wrapper">
-    <!-- about me -->
-    <section class="page-section" id="about">
-      <h3>About Me</h3>
-      <p>
+    <main class="page-wrapper">
+      <!-- about me -->
+      <section class="page-section" id="about">
+        <h3>About Me</h3>
+        <p>
           Fuelled by a passion for creating engaging and user-friendly
           interfaces, I recently completed a comprehensive frontend web
           development bootcamp, equipping me with a solid foundation in HTML,
@@ -84,59 +118,58 @@
       <!-- Skills section-->
       <section class="page-section" id="skills">
         <h3>Skills</h3>
-        <section class="alignItems flexContainer">
+        <div class="column"></div>
+        <div class="alignItems flexContainer">
           <div class="flexRow">
-<!-- Skill #1 -->
-          <div class="flexItemSkill skill1">
-            <div class="content">
-              <!-- Your card content for skill1 goes here -->
+            <!-- Skill #1 -->
+            <div class="flexItemSkill skill1">
+              <div class="content">
+                <!-- Your card content for skill1 goes here -->
+              </div>
             </div>
-          </div>
-          <div class="flexItemSkill skill2">
-            <div class="content">
-              <!-- Your card content for skill2 goes here -->
+            <div class="flexItemSkill skill2">
+              <div class="content">
+                <!-- Your card content for skill2 goes here -->
+              </div>
             </div>
-          </div>
-          <div class="flexItemSkill skill3">
-            <div class="content">
-              <!-- Your card content for skill3 goes here -->
+            <div class="flexItemSkill skill3">
+              <div class="content">
+                <!-- Your card content for skill3 goes here -->
+              </div>
             </div>
-          </div>
-          <div class="flexItemSkill skill4">
-            <div class="content">
-              <!-- Your card content for skill4 goes here -->
+            <div class="flexItemSkill skill4">
+              <div class="content">
+                <!-- Your card content for skill4 goes here -->
+              </div>
             </div>
-          </div>
           </div>
           <div class="flexRow">
-          <div class="flexItemSkill skill5">
-            <div class="content">
-              <!-- Your card content for skill5 goes here -->
+            <div class="flexItemSkill skill5">
+              <div class="content">
+                <!-- Your card content for skill5 goes here -->
+              </div>
             </div>
-          </div>
-          <div class="flexItemSkill skill6">
-            <div class="content">
-              <!-- Your card content for skill6 goes here -->
+            <div class="flexItemSkill skill6">
+              <div class="content">
+                <!-- Your card content for skill6 goes here -->
+              </div>
             </div>
-          </div>
-          <div class="flexItemSkill skill7">
-            <div class="content">
-              <!-- Your card content for skill7 goes here -->
+            <div class="flexItemSkill skill7">
+              <div class="content">
+                <!-- Your card content for skill7 goes here -->
+              </div>
             </div>
-          </div>
-          <div class="flexItemSkill skill8">
-            <div class="content">
-              <!-- Your card content for skill8 goes here -->
+            <div class="flexItemSkill skill8">
+              <div class="content">
+                <!-- Your card content for skill8 goes here -->
+              </div>
             </div>
-          </div>
           </div>
         </div>
       </section>
 
-      </section>
-
       <!-- SKILLS HERE MUST BE INSERTED INTO CARDS ABOVE -->
-        <!-- <div class="col-lg-4 col-md-6 col-sm-12">
+      <!-- <div class="col-lg-4 col-md-6 col-sm-12">
           <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-12">
               <div class="card skillsCard">
@@ -210,122 +243,128 @@
       <!-- portfolio container -->
       <section class="page-section" id="featured-project">
         <h3>Featured Project</h3>
-        <div class="column">
-          <div class="primary">
-            <div class="flexPrimary primaryproject">
-<!-- GuardianStreetMapper -->
+        <div class="column"></div>
+        <div class="primary">
+          <div class="flexPrimary primaryproject">
+            <!-- GuardianStreetMapper -->
+          </div>
+        </div>
+      </section>
+      <section class="page-section" id="other-projects">
+        <h3>Other Projects</h3>
+        <div class="column"></div>
+        <div class="alignItems flexContainer">
+          <div class="flexRow">
+            <div class="flexItem project1">
+              <div class="content">
+                <!-- AYD -->
+              </div>
+            </div>
+            <div class="flexItem project2">
+              <div class="content">
+                <!-- Delicious Recipe Generator -->
+              </div>
             </div>
           </div>
-      </section>
-        <section class="page-section" id="other-projects">
-          <h3>Other Projects</h3>
-          <section class="alignItems flexContainer">
-            <div class="flexRow">
-              <div class="flexItem project1">
-                <div class="content">
-<!-- AYD -->
-                </div>
-              </div>
-              <div class="flexItem project2">
-                <div class="content">
-<!-- Delicious Recipe Generator -->
-                </div>
+          <div class="flexRow">
+            <div class="flexItem2 project3">
+              <div class="content">
+                <!-- Homework 13 - Group Project 2 -->
               </div>
             </div>
-            <div class="flexRow">
-              <div class="flexItem2 project3">
-                <div class="content">
-<!-- Homework 13 - Group Project 2 -->
-                </div>
-              </div>
-              <div class="flexItem2 project4">
-                <div class="content">
-<!-- Homework #12 -->
+            <div class="flexItem2 project4">
+              <div class="content">
+                <!-- Homework #12 -->
               </div>
             </div>
-              <div class="flexItem2 project5">
-                <div class="content">
-<!-- Homework #11 -->
-                </div>
+            <div class="flexItem2 project5">
+              <div class="content">
+                <!-- Homework #11 -->
               </div>
-              </div>
-              <div class="flexRow">
-              <div class="flexItem3 project6">
-                <div class="content">
-<!-- Homework #10 -->
+            </div>
+          </div>
+          <div class="flexRow">
+            <div class="flexItem3 project6">
+              <div class="content">
+                <!-- Homework #10 -->
               </div>
             </div>
             <div class="flexItem3 project7">
               <div class="content">
-<!-- Weather API -->
+                <!-- Weather API -->
+              </div>
+            </div>
+            <div class="flexItem3 project8">
+              <div class="content">
+                <!-- Daily Planner -->
+              </div>
+            </div>
+            <div class="flexItem3 project9">
+              <div class="content">
+                <!-- Quiz Project -->
+              </div>
             </div>
           </div>
-          <div class="flexItem3 project8">
-            <div class="content">
-<!-- Daily Planner -->
-          </div>
-        </div>
-        <div class="flexItem3 project9">
-          <div class="content">
-<!-- Quiz Project -->
-          </div>
-        </div>
-        </div>
-        <div class="flexRow">
-          <div class="flexItem3 project10">
-            <div class="content">
-<!-- Password Generator -->
-          </div>
-        </div>
-        <div class="flexItem3 project11">
-          <div class="content">
-<!-- Console Finances -->
-        </div>
-      </div>
-      <div class="flexItem3 project12">
-        <div class="content">
-<!-- Bootstrap Portfolio -->
-      </div>
-    </div>
-    <div class="flexItem3 project13">
-      <div class="content">
-<!-- 1st Portfolio -->
-      </div>
-    </div>
-
-          </section>
-        </div>
-      </section>
-    </main>
-
-    <!-- Contact Section Footer -->
-    <footer class="py-0 my-0 footer">
-      <section class="page-section" id="contact">
-        <h5>Contact Me</h5>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-2 col-md-2 col-sm-4"><h4>Contact Me</h4></div>
-            <div class="col-lg-10 col-md-10 col-sm-8">
-              <div class="contact-item contactItem">
-                <i class="fas fa-phone"></i>
-                <a href="tel:+447753911825">07753911825</a>
-                <i class="fas fa-envelope"></i>
-                <a href="mailto:joe.higgs@live.com">joe.higgs@live.com</a>
-                <i class="fab fa-linkedin"></i>
-                <a href="https://www.linkedin.com/in/joelloydhiggs/">LinkedIn</a>
-                <i class="fab fa-github"></i>
-                <a href="https://github.com/nonebula">GitHub</a>
-                <i class="fab fa-twitter"></i>
-                <a href="https://twitter.com/no_nebula_8421">Twitter</a>
+          <div class="flexRow">
+            <div class="flexItem3 project10">
+              <div class="content">
+                <!-- Password Generator -->
+              </div>
+            </div>
+            <div class="flexItem3 project11">
+              <div class="content">
+                <!-- Console Finances -->
+              </div>
+            </div>
+            <div class="flexItem3 project12">
+              <div class="content">
+                <!-- Bootstrap Portfolio -->
+              </div>
+            </div>
+            <div class="flexItem3 project13">
+              <div class="content">
+                <!-- 1st Portfolio -->
               </div>
             </div>
           </div>
         </div>
       </section>
-      <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <p class="text-center text-body-secondary copyright">
-        © 2023 Company, Inc
-      </p>
+    </main>
+
+    <!-- Contact Section -->
+    <section class="page-section" id="contact">
+      <h3>Contact Me</h3>
+            <div class="contact-item">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+447753911825">07753911825</a>
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:joe.higgs@live.com">joe.higgs@live.com</a>
+              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/joelloydhiggs/">LinkedIn</a>
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/nonebula">GitHub</a>
+              <i class="fab fa-twitter"></i>
+              <a href="https://twitter.com/no_nebula_8421">Twitter</a>
+            </div>
+    </section>
+
+    <footer class="custom-footer">
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a href="#about" class="nav-link footer-link">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a href="#skills" class="nav-link footer-link">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a href="#projects" class="nav-link footer-link">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a
+          href="./assets/downloads/cv.pdf" class="nav-link footer-link">Resume</a>
+        </li>
+      </ul>
+      <p id="copyright">© 2023 Joe Higgs</p>
     </footer>
 
     <!-- JavaScript Dependencies (Popper.js and Bootstrap) -->
