--- a/index.html
+++ b/index.html
@@ -121,124 +121,174 @@
         <div class="column"></div>
         <div class="alignItems flexContainer">
           <div class="flexRow">
-            <!-- Skill #1 -->
             <div class="flexItemSkill skill1">
               <div class="content">
-                <!-- Your card content for skill1 goes here -->
+                <img
+                  src="./assets/Images/html-240.jpg"
+                  class="skill-logo"
+                  alt="html logo"
+                />
+                <div class="overlay">
+                  <div class="overlay-text-heading">
+                    <h4>HTML</h4>
+                    <div class="overlay-text">
+                      Expert in crafting web content with precise code.
+                      Proficient in semantic HTML for organized, accessible
+                      websites across devices. Committed to high coding
+                      standards, ensuring user-friendly web experiences.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="flexItemSkill skill2">
               <div class="content">
-                <!-- Your card content for skill2 goes here -->
+                <img
+                  src="./assets/Images/css-240.jpg"
+                  class="skill-logo"
+                  alt="css logo"
+                />
+                <div class="overlay">
+                  <div class="overlay-text-heading">
+                    <h4>CSS</h4>
+                    <div class="overlay-text">
+                      CSS expert with a focus on crafting visually appealing and
+                      responsive web designs. Proficient in clean code
+                      practices, layout optimization, and Bootstrap, ensuring
+                      user-friendly interfaces that enhance website aesthetics.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="flexItemSkill skill3">
               <div class="content">
-                <!-- Your card content for skill3 goes here -->
+                <img
+                  src="./assets/Images/javascript-240.jpg"
+                  class="skill-logo"
+                  alt="javascript logo"
+                />
+                <div class="overlay">
+                  <div class="overlay-text-heading">
+                    <h4>Javascript</h4>
+                    <div class="overlay-text">
+                      I specialize in creating dynamic, interactive web
+                      experiences. My skills encompass clean coding practices,
+                      robust client-side functionality, and enhancing website
+                      interactivity.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="flexItemSkill skill4">
               <div class="content">
-                <!-- Your card content for skill4 goes here -->
+                <img
+                  src="./assets/Images/wordpress-240.jpg"
+                  class="skill-logo"
+                  alt="wordpress logo"
+                />
+                <div class="overlay">
+                  <div class="overlay-text-heading">
+                    <h4>Wordpress</h4>
+                    <div class="overlay-text">
+                      I'm skilled in customizing and managing content on this
+                      popular platform. My expertise includes theme development,
+                      plugin customization, and creating user-friendly websites
+                      that meet specific client needs.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
           <div class="flexRow">
             <div class="flexItemSkill skill5">
               <div class="content">
-                <!-- Your card content for skill5 goes here -->
+                <img
+                  src="./assets/Images/react-240.jpg"
+                  class="skill-logo"
+                  alt="react logo"
+                />
+                <div class="overlay">
+                  <div class="overlay-text-heading">
+                    <h4>React</h4>
+                    <div class="overlay-text">
+                      I specialize in crafting dynamic and responsive web
+                      applications. My expertise includes creating interactive
+                      user interfaces, efficient state management, and
+                      developing reusable components for seamless and engaging
+                      user experiences.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="flexItemSkill skill6">
               <div class="content">
-                <!-- Your card content for skill6 goes here -->
+                <img
+                  src="./assets/Images/angular-240.jpg"
+                  class="skill-logo"
+                  alt="angular logo"
+                />
+                <div class="overlay">
+                  <div class="overlay-text-heading">
+                    <h4>Angular</h4>
+                    <div class="overlay-text">
+                      I specialize in developing robust, single-page web
+                      applications. My expertise includes creating modular,
+                      maintainable code, managing data flow, and leveraging
+                      Angular's powerful features for high-performance,
+                      interactive web solutions.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="flexItemSkill skill7">
               <div class="content">
-                <!-- Your card content for skill7 goes here -->
+                <img
+                  src="./assets/images/project-management-96.png"
+                  class="skill-logo"
+                  alt="project management logo"
+                />
+                <div class="overlay">
+                  <div class="overlay-text-heading">
+                    <h4>Project Management</h4>
+                    <div class="overlay-text">
+                      My teaching background ensures efficient coordination and
+                      task prioritization. My strengths include strategic
+                      planning and communication, ensuring successful project
+                      outcomes through organized and collaborative efforts.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="flexItemSkill skill8">
               <div class="content">
-                <!-- Your card content for skill8 goes here -->
+                <img
+                  src="./assets/images/team-96.png"
+                  class="skill-logo"
+                  alt="pair programming logo"
+                />
+                <div class="overlay">
+                  <div class="overlay-text-heading">
+                    <h4>Pair Programming</h4>
+                    <div class="overlay-text">
+                      I bring expertise from my teaching background to enhance
+                      code quality and productivity. With effective
+                      communication and shared problem-solving, I excel in this
+                      programming approach, fostering high-quality teamwork and
+                      results.
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
-
-      <!-- SKILLS HERE MUST BE INSERTED INTO CARDS ABOVE -->
-      <!-- <div class="col-lg-4 col-md-6 col-sm-12">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="card skillsCard">
-                <img src="./assets/Images/html-240.jpg" class="card-img-top logo" alt="html logo" />
-                <div class="card-body">
-                  <h5 class="card-title">HTML</h5>
-                  <p class="card-text">
-                    Proficient in HTML, I excel in structuring web content and creating clean, efficient code. My strong foundation in semantic HTML ensures well-organized, accessible websites and compatibility across various browsers and devices. I am dedicated to maintaining high-quality coding practices to build user-friendly and accessible web experiences.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="card skillsCard">
-                <img src="./assets/Images/css-240.jpg" class="card-img-top logo" alt="css logo" />
-                <div class="card-body">
-                  <h5 class="card-title">CSS</h5>
-                  <p class="card-text">
-                    Proficient in CSS, I specialize in crafting visually appealing and responsive web designs. My skills encompass clean code practices, layout optimization, and expertise in frameworks like Bootstrap, enabling the creation of user-friendly interfaces that enhance website aesthetics.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="card skillsCard">
-                <img src="./assets/Images/javascript-240.jpg" class="card-img-top logo" alt="javascript logo" />
-                <div class="card-body">
-                  <h5 class="card-title">JavaScript</h5>
-                  <p class="card-text">
-                    Proficient in JavaScript, I specialize in creating dynamic and interactive web experiences. My skills encompass coding robust, client-side functionality, improving user engagement, and enhancing website interactivity through various libraries and frameworks.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="card skillsCard">
-                <img src="./assets/Images/wordpress-240.jpg" class="card-img-top logo" alt="wordpress logo" />
-                <div class="card-body">
-                  <h5 class="card-title">WordPress</h5>
-                  <p class="card-text">
-                    Experienced in WordPress, I'm skilled in customizing and managing content on this popular platform. My expertise includes theme development, plugin customization, and creating user-friendly websites that meet specific client needs.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="card skillsCard">
-                <img src="./assets/Images/react-240.jpg" class="card-img-top logo" alt="react logo" />
-                <div class="card-body">
-                  <h5 class="card-title">React</h5>
-                  <p class="card-text">
-                    Proficient in React, I specialize in building dynamic and responsive web applications. My skills encompass creating interactive user interfaces, managing state efficiently, and developing reusable components to deliver seamless and engaging user experiences.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-12">
-              <div class="card skillsCard">
-                <img src="./assets/Images/angular-240.jpg" class="card-img-top logo" alt="angular logo" />
-                <div class="card-body">
-                  <h5 class="card-title">Angular</h5>
-                  <p class="card-text">
-                    Skilled in Angular, I specialize in developing robust, single-page web applications. My expertise includes creating modular, maintainable code, managing data flow, and leveraging Angular's powerful features to build high-performance, interactive web solutions.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
 
       <!-- portfolio container -->
       <section class="page-section" id="featured-project">
@@ -334,18 +384,18 @@
     <!-- Contact Section -->
     <section class="page-section" id="contact">
       <h3>Contact Me</h3>
-            <div class="contact-item">
-              <i class="fas fa-phone"></i>
-              <a href="tel:+447753911825">07753911825</a>
-              <i class="fas fa-envelope"></i>
-              <a href="mailto:joe.higgs@live.com">joe.higgs@live.com</a>
-              <i class="fab fa-linkedin"></i>
-              <a href="https://www.linkedin.com/in/joelloydhiggs/">LinkedIn</a>
-              <i class="fab fa-github"></i>
-              <a href="https://github.com/nonebula">GitHub</a>
-              <i class="fab fa-twitter"></i>
-              <a href="https://twitter.com/no_nebula_8421">Twitter</a>
-            </div>
+      <div class="contact-item">
+        <i class="fas fa-phone"></i>
+        <a href="tel:+447753911825">07753911825</a>
+        <i class="fas fa-envelope"></i>
+        <a href="mailto:joe.higgs@live.com">joe.higgs@live.com</a>
+        <i class="fab fa-linkedin"></i>
+        <a href="https://www.linkedin.com/in/joelloydhiggs/">LinkedIn</a>
+        <i class="fab fa-github"></i>
+        <a href="https://github.com/nonebula">GitHub</a>
+        <i class="fab fa-twitter"></i>
+        <a href="https://twitter.com/no_nebula_8421">Twitter</a>
+      </div>
     </section>
 
     <footer class="custom-footer">
@@ -360,8 +410,9 @@
           <a href="#projects" class="nav-link footer-link">Projects</a>
         </li>
         <li class="nav-item">
-          <a
-          href="./assets/downloads/cv.pdf" class="nav-link footer-link">Resume</a>
+          <a href="./assets/downloads/cv.pdf" class="nav-link footer-link"
+            >Resume</a
+          >
         </li>
       </ul>
       <p id="copyright">© 2023 Joe Higgs</p>
