--- a/index.html
+++ b/index.html
@@ -296,7 +296,12 @@
         <div class="column"></div>
         <div class="primary">
           <div class="flexPrimary primaryproject">
-            <!-- GuardianStreetMapper -->
+            <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
+            <!-- GuardianStreetMapper https://github.com/nonebula/GuardianStreetMapper https://nonebula.github.io/GuardianStreetMapper/-->
           </div>
         </div>
       </section>
@@ -306,74 +311,139 @@
         <div class="alignItems flexContainer">
           <div class="flexRow">
             <div class="flexItem project1">
+              <img
+              src="./assets/images/ayd-sc.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- AYD -->
+                <!-- AYD www.askyourdietitian.com -->
               </div>
             </div>
             <div class="flexItem project2">
+              <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Delicious Recipe Generator -->
+                <!-- Delicious Recipe Generator https://github.com/nonebula/delicious-recipe-generator https://nonebula.github.io/delicious-recipe-generator/ -->
               </div>
             </div>
           </div>
           <div class="flexRow">
             <div class="flexItem2 project3">
+              <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Homework 13 - Group Project 2 -->
+                <!-- Homework 13 - Group Project 2 rename: https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
               </div>
             </div>
             <div class="flexItem2 project4">
+              <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Homework #12 -->
+                <!-- Homework #12 rename: https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
               </div>
             </div>
             <div class="flexItem2 project5">
+              <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Homework #11 -->
+                <!-- Homework #11 rename: https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
               </div>
             </div>
           </div>
           <div class="flexRow">
             <div class="flexItem3 project6">
+              <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Homework #10 -->
+                <!-- Homework #10 set up repo etc rename: https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
               </div>
             </div>
             <div class="flexItem3 project7">
+              <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Weather API -->
+                <!-- Weather API https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
               </div>
             </div>
             <div class="flexItem3 project8">
+              <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Daily Planner -->
+                <!-- Daily Planner https://github.com/nonebula/fantastic-daily-planner https://nonebula.github.io/fantastic-daily-planner/ -->
               </div>
             </div>
             <div class="flexItem3 project9">
+              <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Quiz Project -->
+                <!-- Quiz Project https://github.com/nonebula/super-awesome-quizmaster https://nonebula.github.io/super-awesome-quizmaster/ -->
               </div>
             </div>
           </div>
           <div class="flexRow">
             <div class="flexItem3 project10">
+              <img
+              src="./assets/images/team-96.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Password Generator -->
+                <!-- Password Generator https://github.com/nonebula/fancy-magic-password-generator  https://nonebula.github.io/fancy-magic-password-generator/ -->
               </div>
             </div>
             <div class="flexItem3 project11">
+              <img
+              src="./assets/images/02-hero-bg.jpg"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- Console Finances -->
+                <!-- Console Finances https://github.com/nonebula/Console-Finances https://nonebula.github.io/Console-Finances/ -->
               </div>
             </div>
             <div class="flexItem3 project12">
+              <img
+              src="./assets/images/portfolio.png"
+              class="skill-logo"
+              alt="bootstrap portfolio screenshot"
+            />
               <div class="content">
-                <!-- Bootstrap Portfolio -->
+                <!-- Bootstrap Portfolio https://github.com/nonebula/Bootstrap-Portfolio https://nonebula.github.io/Bootstrap-Portfolio/ -->
               </div>
             </div>
             <div class="flexItem3 project13">
+              <img
+              src="./assets/images/portfolio-screenshot.png"
+              class="skill-logo"
+              alt="pair programming logo"
+            />
               <div class="content">
-                <!-- 1st Portfolio -->
+                <!-- 1st Portfolio https://github.com/nonebula/joe-higgs-portfolio https://nonebula.github.io/joe-higgs-portfolio/ -->
               </div>
             </div>
           </div>
