Added images & placeholder images + links

--- a/index.html
+++ b/index.html
@@ -297,9 +297,9 @@
         <div class="primary">
           <div class="flexPrimary primaryproject">
             <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/M4 Challenge.png"
+              class="main-project-image"
+              alt="Guardian Street Mapper screenshot"
             />
             <!-- GuardianStreetMapper https://github.com/nonebula/GuardianStreetMapper https://nonebula.github.io/GuardianStreetMapper/-->
           </div>
@@ -310,21 +310,21 @@
         <div class="column"></div>
         <div class="alignItems flexContainer">
           <div class="flexRow">
-            <div class="flexItem project1">
+            <div class="flexItem project">
               <img
-              src="./assets/images/ayd-sc.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/ayd-sc.png"
+              class="project-image"
+              alt="ask your dietitian screenshot"
             />
               <div class="content">
                 <!-- AYD www.askyourdietitian.com -->
               </div>
             </div>
-            <div class="flexItem project2">
+            <div class="flexItem project">
               <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/delicious-recipe-generator.png"
+              class="project-image"
+              alt="delicious recipe generator screenshot"
             />
               <div class="content">
                 <!-- Delicious Recipe Generator https://github.com/nonebula/delicious-recipe-generator https://nonebula.github.io/delicious-recipe-generator/ -->
@@ -332,73 +332,73 @@
             </div>
           </div>
           <div class="flexRow">
-            <div class="flexItem2 project3">
+            <div class="flexItem2 project">
               <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/M4 Challenge.png"
+              class="project-image"
+              alt="group project 2 screenshot"
             />
               <div class="content">
                 <!-- Homework 13 - Group Project 2 rename: https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
               </div>
             </div>
-            <div class="flexItem2 project4">
+            <div class="flexItem2 project">
               <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/M4 Challenge.png"
+              class="project-image"
+              alt="homework 12 screenshot"
             />
               <div class="content">
                 <!-- Homework #12 rename: https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
               </div>
             </div>
-            <div class="flexItem2 project5">
+            <div class="flexItem2 project">
               <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/M4 Challenge.png"
+              class="project-image"
+              alt="smart readme generator screenshot"
             />
               <div class="content">
-                <!-- Homework #11 rename: https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
+                <!-- Homework #11 rename: https://github.com/nonebula/smart-readme-generator https://nonebula.github.io/smart-readme-generator/ -->
               </div>
             </div>
           </div>
           <div class="flexRow">
-            <div class="flexItem3 project6">
+            <div class="flexItem3 project">
               <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/M4 Challenge.png"
+              class="project-image"
+              alt="smart readme generator screenshot"
             />
               <div class="content">
-                <!-- Homework #10 set up repo etc rename: https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
+                <!-- Readme Generator: https://github.com/nonebula/smart-readme-generator https://nonebula.github.io/smart-readme-generator/ -->
               </div>
             </div>
-            <div class="flexItem3 project7">
+            <div class="flexItem3 project">
               <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/weather-dashboard.png"
+              class="project-image"
+              alt="weather API page screenshot"
             />
               <div class="content">
                 <!-- Weather API https://github.com/nonebula/open-weather-map https://nonebula.github.io/open-weather-map/ -->
               </div>
             </div>
-            <div class="flexItem3 project8">
+            <div class="flexItem3 project">
               <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/day-scheduler.png"
+              class="project-image"
+              alt="daily work planner screenshot"
             />
               <div class="content">
                 <!-- Daily Planner https://github.com/nonebula/fantastic-daily-planner https://nonebula.github.io/fantastic-daily-planner/ -->
               </div>
             </div>
-            <div class="flexItem3 project9">
+            <div class="flexItem3 project">
               <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/quiz-challenge.png"
+              class="project-image"
+              alt="quiz project screenshot"
             />
               <div class="content">
                 <!-- Quiz Project https://github.com/nonebula/super-awesome-quizmaster https://nonebula.github.io/super-awesome-quizmaster/ -->
@@ -406,41 +406,41 @@
             </div>
           </div>
           <div class="flexRow">
-            <div class="flexItem3 project10">
+            <div class="flexItem3 project">
               <img
-              src="./assets/images/team-96.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/Password Generator.png"
+              class="project-image"
+              alt="fancy password generator screenshot"
             />
               <div class="content">
                 <!-- Password Generator https://github.com/nonebula/fancy-magic-password-generator  https://nonebula.github.io/fancy-magic-password-generator/ -->
               </div>
             </div>
-            <div class="flexItem3 project11">
+            <div class="flexItem3 project">
               <img
-              src="./assets/images/02-hero-bg.jpg"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/M4 Challenge.png"
+              class="project-image"
+              alt="console.log finances calculations screenshot"
             />
               <div class="content">
                 <!-- Console Finances https://github.com/nonebula/Console-Finances https://nonebula.github.io/Console-Finances/ -->
               </div>
             </div>
-            <div class="flexItem3 project12">
+            <div class="flexItem3 project">
               <img
-              src="./assets/images/portfolio.png"
-              class="skill-logo"
+              src="./assets/images/project-screens/bootstrap-portfolio.png"
+              class="project-image"
               alt="bootstrap portfolio screenshot"
             />
               <div class="content">
                 <!-- Bootstrap Portfolio https://github.com/nonebula/Bootstrap-Portfolio https://nonebula.github.io/Bootstrap-Portfolio/ -->
               </div>
             </div>
-            <div class="flexItem3 project13">
+            <div class="flexItem3 project">
               <img
-              src="./assets/images/portfolio-screenshot.png"
-              class="skill-logo"
-              alt="pair programming logo"
+              src="./assets/images/project-screens/first-portfolio.png"
+              class="project-image"
+              alt="first portfolio screenshot"
             />
               <div class="content">
                 <!-- 1st Portfolio https://github.com/nonebula/joe-higgs-portfolio https://nonebula.github.io/joe-higgs-portfolio/ -->
