Color scheme and buttons finalised. Text content of overlays added. Link colors finalised.

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             />
             <div class="primary-overlay">
               <div class="primary-overlay-heading">
-                <h4>Guardian Street Mapper</h4>
+                <h1>Guardian Street Mapper</h1>
                 <div class="primary-overlay-text">
                   An independent project developed to inform citizens and track
                   thefts and robberies. This project was developed after I
@@ -311,8 +311,9 @@
                   two-week period. Too many phone thefts take place nowadays,
                   and many people have no idea how to respond to the situation.
                   This page contains information and advice, as well as giving
-                  users the option to log an incident without sharing any
+                  users the option to log an incident without sharing
                   personal information.
+                  <br><b>Skills:</b> HTML, CSS. GitHub, JavaScript, DOM, API.</br>
                 </div>
                 <div class="primary-buttons">
                   <a
@@ -350,6 +351,8 @@
                   <h4>Ask Your Dietitian</h4>
                   <div class="secondary-overlay-text">
                     A WordPress project for my client, a dietitian.
+                    Website migrated and maintained and built according to wireframe.
+                    <br><b>Skills:</b>HTML, CSS. WordPress, Plug-ins, SEO</br>
                   </div>
                   <div class="secondary-buttons">
                     <a
@@ -372,8 +375,10 @@
                 <div class="secondary-text-heading">
                   <h4>Delicious Recipe Generator</h4>
                   <div class="secondary-overlay-text">
-                    A recipe generator that generators recipes based on your
-                    ingredient selections.
+                    A recipe generator that generators recipes based on user
+                    ingredient selections. Users can save their chosen recipes to
+                    local storage and retrieve them on a dedicated page.
+                    <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM, API.</br>
                   </div>
                   <div class="secondary-buttons">
                     <a
@@ -406,7 +411,9 @@
                   <div class="tertiary-text-heading">
                     <h5>Group Project 2</h5>
                     <div class="tertiary-overlay-text">
-                      Second Group Project
+                      A recipe generator that generators recipes based on user
+                    ingredient selections. Users can loren ipsum.
+                    <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM, API.</br>
                     </div>
                     <div class="tertiary-buttons">
                       <a
@@ -438,7 +445,10 @@
                 <div class="tertiary-overlay">
                   <div class="tertiary-text-heading">
                     <h5>Homework 12</h5>
-                    <div class="tertiary-overlay-text">12th Homework</div>
+                    <div class="tertiary-overlay-text">
+                      A recipe generator that generators recipes based on user
+                      ingredient selections. Users can loren ipsum.
+                      <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM, API.</br></div>
                     <div class="tertiary-buttons">
                       <a
                         class="visit-page-btn"
@@ -470,7 +480,9 @@
                   <div class="tertiary-text-heading">
                     <h5>Smart Readme Generator</h5>
                     <div class="tertiary-overlay-text">
-                      README Generator to generate READMEs.
+                      A recipe generator that generators recipes based on user
+                    ingredient selections. Users can loren ipsum.
+                    <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM, API.</br>
                     </div>
                     <div class="tertiary-buttons">
                       <a
@@ -506,7 +518,8 @@
                   <div class="quaternary-text-heading">
                     <h5>README Generator</h5>
                     <div class="quaternary-overlay-text">
-                      README Generator to generate READMEs.
+                      README Generator to generate READMEs based in instructions.
+                      <br><b>Skills:</b> GitHub, JavaScript, DOM.</br>
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -539,7 +552,8 @@
                   <div class="quaternary-text-heading">
                     <h6>Weather Dashboard</h6>
                     <div class="quaternary-overlay-text">
-                      A weather dashboard app.
+                      A dashboard that utilizes web APIs and user input to return up-to-date weather info.
+                      <br><b>Skills:</b>CSS. GitHub, JavaScript, DaysJS, API.</br>
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -572,7 +586,8 @@
                   <div class="quaternary-text-heading">
                     <h6>Daily Planner</h6>
                     <div class="quaternary-overlay-text">
-                      A daily planner app.
+                      A daily planner app that saves user input and tracks time to show past, present and future.
+                      <br><b>Skills:</b>CSS. GitHub, JavaScript, DOM, DaysJS.</br>
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -605,7 +620,8 @@
                   <div class="quaternary-text-heading">
                     <h6>Coding Quiz</h6>
                     <div class="quaternary-overlay-text">
-                      Coding quiz to test knowledge.
+                      A coding quiz to test user's knowledge of Javascript through DOM manipulation.
+                      <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM.</br>
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -641,7 +657,8 @@
                   <div class="quaternary-text-heading">
                     <h6>Password Generator</h6>
                     <div class="quaternary-overlay-text">
-                      A password generator app.
+                      An app that takes user input through prompts and generates a secure password.
+                      <br><b>Skills:</b> HTML, CSS. GitHub, JavaScript.</br>
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -674,7 +691,8 @@
                   <div class="quaternary-text-heading">
                     <h6>M4 Challenge</h6>
                     <div class="quaternary-overlay-text">
-                      A javascript analysis of some finances using console.log.
+                      A javascript analysis of some finances using console.log to solve equations.
+                      <br><b>Skills:</b> Javascript, GitHub. </br>
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -707,7 +725,7 @@
                   <div class="quaternary-text-heading">
                     <h6>Bootstrap Portfolio</h6>
                     <div class="quaternary-overlay-text">
-                      My first boostrap portfolio page.
+                      My first boostrap portfolio page.<br><b>Skills:</b> HTML, CSS. Bootstrap, GitHub.</br>
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -740,7 +758,7 @@
                   <div class="quaternary-text-heading">
                     <h6>First Portfolio</h6>
                     <div class="quaternary-overlay-text">
-                      My first portfolio page.
+                      My first portfolio page. <br><b>Skills:</b> HTML, CSS. GitHub.</br>
                     </div>
                     <div class="quaternary-buttons">
                       <a
