Fixed </br> errors

--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
                   two-week period. Too many phone thefts take place nowadays,
                   and many people have no idea how to respond to the situation.
                   This page contains information and advice, as well as giving
-                  users the option to log an incident without sharing
-                  personal information.
-                  <br><b>Skills:</b> HTML, CSS. GitHub, JavaScript, DOM, API.</br>
+                  users the option to log an incident without sharing personal
+                  information.
+                  <br /><b>Skills:</b> HTML, CSS. GitHub, JavaScript, DOM, API.
                 </div>
                 <div class="primary-buttons">
                   <a
@@ -350,9 +350,9 @@
                 <div class="secondary-text-heading">
                   <h4>Ask Your Dietitian</h4>
                   <div class="secondary-overlay-text">
-                    A WordPress project for my client, a dietitian.
-                    Website migrated and maintained and built according to wireframe.
-                    <br><b>Skills:</b>HTML, CSS. WordPress, Plug-ins, SEO</br>
+                    A WordPress project for my client, a dietitian. Website
+                    migrated and maintained and built according to wireframe.
+                    <br /><b>Skills:</b>HTML, CSS. WordPress, Plug-ins, SEO
                   </div>
                   <div class="secondary-buttons">
                     <a
@@ -376,9 +376,9 @@
                   <h4>Delicious Recipe Generator</h4>
                   <div class="secondary-overlay-text">
                     A recipe generator that generators recipes based on user
-                    ingredient selections. Users can save their chosen recipes to
-                    local storage and retrieve them on a dedicated page.
-                    <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM, API.</br>
+                    ingredient selections. Users can save their chosen recipes
+                    to local storage and retrieve them on a dedicated page.
+                    <br /><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM, API.
                   </div>
                   <div class="secondary-buttons">
                     <a
@@ -412,8 +412,9 @@
                     <h5>Group Project 2</h5>
                     <div class="tertiary-overlay-text">
                       A recipe generator that generators recipes based on user
-                    ingredient selections. Users can loren ipsum.
-                    <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM, API.</br>
+                      ingredient selections. Users can loren ipsum.
+                      <br /><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM,
+                      API.
                     </div>
                     <div class="tertiary-buttons">
                       <a
@@ -448,7 +449,9 @@
                     <div class="tertiary-overlay-text">
                       A recipe generator that generators recipes based on user
                       ingredient selections. Users can loren ipsum.
-                      <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM, API.</br></div>
+                      <br /><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM,
+                      API.
+                    </div>
                     <div class="tertiary-buttons">
                       <a
                         class="visit-page-btn"
@@ -481,8 +484,9 @@
                     <h5>Smart Readme Generator</h5>
                     <div class="tertiary-overlay-text">
                       A recipe generator that generators recipes based on user
-                    ingredient selections. Users can loren ipsum.
-                    <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM, API.</br>
+                      ingredient selections. Users can loren ipsum.
+                      <br /><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM,
+                      API.
                     </div>
                     <div class="tertiary-buttons">
                       <a
@@ -518,8 +522,9 @@
                   <div class="quaternary-text-heading">
                     <h5>README Generator</h5>
                     <div class="quaternary-overlay-text">
-                      README Generator to generate READMEs based in instructions.
-                      <br><b>Skills:</b> GitHub, JavaScript, DOM.</br>
+                      README Generator to generate READMEs based in
+                      instructions.
+                      <br /><b>Skills:</b> GitHub, JavaScript, DOM.
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -552,8 +557,9 @@
                   <div class="quaternary-text-heading">
                     <h6>Weather Dashboard</h6>
                     <div class="quaternary-overlay-text">
-                      A dashboard that utilizes web APIs and user input to return up-to-date weather info.
-                      <br><b>Skills:</b>CSS. GitHub, JavaScript, DaysJS, API.</br>
+                      A dashboard that utilizes web APIs and user input to
+                      return up-to-date weather info.
+                      <br /><b>Skills:</b>CSS. GitHub, JavaScript, DaysJS, API.
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -586,8 +592,9 @@
                   <div class="quaternary-text-heading">
                     <h6>Daily Planner</h6>
                     <div class="quaternary-overlay-text">
-                      A daily planner app that saves user input and tracks time to show past, present and future.
-                      <br><b>Skills:</b>CSS. GitHub, JavaScript, DOM, DaysJS.</br>
+                      A daily planner app that saves user input and tracks time
+                      to show past, present and future.
+                      <br /><b>Skills:</b>CSS. GitHub, JavaScript, DOM, DaysJS.
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -620,8 +627,9 @@
                   <div class="quaternary-text-heading">
                     <h6>Coding Quiz</h6>
                     <div class="quaternary-overlay-text">
-                      A coding quiz to test user's knowledge of Javascript through DOM manipulation.
-                      <br><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM.</br>
+                      A coding quiz to test user's knowledge of Javascript
+                      through DOM manipulation.
+                      <br /><b>Skills:</b>HTML, CSS. GitHub, JavaScript, DOM.
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -657,8 +665,9 @@
                   <div class="quaternary-text-heading">
                     <h6>Password Generator</h6>
                     <div class="quaternary-overlay-text">
-                      An app that takes user input through prompts and generates a secure password.
-                      <br><b>Skills:</b> HTML, CSS. GitHub, JavaScript.</br>
+                      An app that takes user input through prompts and generates
+                      a secure password.
+                      <br /><b>Skills:</b> HTML, CSS. GitHub, JavaScript.
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -691,8 +700,9 @@
                   <div class="quaternary-text-heading">
                     <h6>M4 Challenge</h6>
                     <div class="quaternary-overlay-text">
-                      A javascript analysis of some finances using console.log to solve equations.
-                      <br><b>Skills:</b> Javascript, GitHub. </br>
+                      A javascript analysis of some finances using console.log
+                      to solve equations.
+                      <br /><b>Skills:</b> Javascript, GitHub.
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -725,7 +735,8 @@
                   <div class="quaternary-text-heading">
                     <h6>Bootstrap Portfolio</h6>
                     <div class="quaternary-overlay-text">
-                      My first boostrap portfolio page.<br><b>Skills:</b> HTML, CSS. Bootstrap, GitHub.</br>
+                      My first boostrap portfolio page.<br /><b>Skills:</b>
+                      HTML, CSS. Bootstrap, GitHub.
                     </div>
                     <div class="quaternary-buttons">
                       <a
@@ -758,7 +769,8 @@
                   <div class="quaternary-text-heading">
                     <h6>First Portfolio</h6>
                     <div class="quaternary-overlay-text">
-                      My first portfolio page. <br><b>Skills:</b> HTML, CSS. GitHub.</br>
+                      My first portfolio page. <br /><b>Skills:</b> HTML, CSS.
+                      GitHub.
                     </div>
                     <div class="quaternary-buttons">
                       <a
