Page mostly responsive. Styling added to css for fluidity

--- a/index.html
+++ b/index.html
@@ -899,18 +899,34 @@
 
     <!-- Contact Section -->
     <section class="page-section" id="contact">
-      <h2>Contact Me</h2>
-      <div class="contact-item">
-        <i class="fas fa-phone"></i>
-        <a href="tel:+447753911825">07753911825</a>
-        <i class="fas fa-envelope"></i>
-        <a href="mailto:joe.higgs@live.com">joe.higgs@live.com</a>
-        <i class="fab fa-linkedin"></i>
-        <a href="https://www.linkedin.com/in/joelloydhiggs/">LinkedIn</a>
-        <i class="fab fa-github"></i>
-        <a href="https://github.com/nonebula">GitHub</a>
-        <i class="fab fa-twitter"></i>
-        <a href="https://twitter.com/no_nebula_8421">Twitter</a>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2 col-md-3">
+            <h2>Contact Me</h2>
+          </div>
+          <div class="row text-center contact-item">
+            <div class="col-md-6 col-lg-4 mb-4">
+              <i class="fas fa-phone"></i>
+              <a href="tel:+447753911825">07753911825</a>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <i class="fas fa-envelope"></i>
+              <a href="mailto:joe.higgs@live.com">joe.higgs@live.com</a>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <i class="fab fa-linkedin"></i>
+              <a href="https://www.linkedin.com/in/joelloydhiggs/">LinkedIn</a>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/nonebula">GitHub</a>
+            </div>
+            <div class="col-md-6 col-lg-4 mb-4">
+              <i class="fab fa-twitter"></i>
+              <a href="https://twitter.com/no_nebula_8421">Twitter</a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
