Added 2 classes to toggle

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             >Joe Higgs</a
           >
           <button
-            class="navbar-toggler"
+            class="navbar-toggler navbar-light"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarNav"
@@ -36,7 +36,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon navbar-light"></span>
           </button>
           <div class="collapse navbar-collapse navbar-light" id="navbarNav">
             <ul class="navbar-nav">
