Fixed image pathways

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="skill-item">
                       <div class="skill-content">
                         <img
-                          src="./assets/Images/css-240.jpg"
+                          src="./assets/images/css-240.jpg"
                           class="skill-logo img-fluid"
                           alt="css logo"
                         />
@@ -192,7 +192,7 @@
                     <div class="skill-item">
                       <div class="skill-content">
                         <img
-                          src="./assets/Images/javascript-240.jpg"
+                          src="./assets/images/javascript-240.jpg"
                           class="skill-logo img-fluid"
                           alt="javascript logo"
                         />
@@ -216,7 +216,7 @@
                     <div class="skill-item">
                       <div class="skill-content">
                         <img
-                          src="./assets/Images/wordpress-240.jpg"
+                          src="./assets/images/wordpress-240.jpg"
                           class="skill-logo img-fluid"
                           alt="wordpress logo"
                         />
@@ -244,7 +244,7 @@
                     <div class="skill-item">
                       <div class="skill-content">
                         <img
-                          src="./assets/Images/react-240.jpg"
+                          src="./assets/images/react-240.jpg"
                           class="skill-logo img-fluid"
                           alt="react logo"
                         />
@@ -269,7 +269,7 @@
                     <div class="skill-item">
                       <div class="skill-content">
                         <img
-                          src="./assets/Images/angular-240.jpg"
+                          src="./assets/images/angular-240.jpg"
                           class="skill-logo img-fluid"
                           alt="angular logo"
                         />
@@ -750,7 +750,7 @@
               <div class="col-md-3 col-lg-3 mb-2">
                 <div class="quaternary-project project quaternary-content">
                   <img
-                    src="./assets/images/project-screens/Password Generator.png"
+                    src="./assets/images/project-screens/PasswordGenerator.png"
                     class="project-image img-fluid"
                     alt="Fancy Password Generator screenshot"
                   />
@@ -787,7 +787,7 @@
               <div class="col-md-3 col-lg-3 mb-2">
                 <div class="quaternary-project project quaternary-content">
                   <img
-                    src="./assets/images/project-screens/M4 Challenge.png"
+                    src="./assets/images/project-screens/M4Challenge.png"
                     class="project-image img-fluid"
                     alt="console.log Finances Calculations screenshot"
                   />
