HTML image path

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="skill-item">
                       <div class="skill-content">
                         <img
-                          src="./assets/Images/html-240.jpg"
+                          src="./assets/images/html-240.jpg"
                           class="skill-logo img-fluid"
                           alt="html logo"
                         />
