Added team generator project

--- a/index.html
+++ b/index.html
@@ -556,30 +556,30 @@
               <div class="col-md-4 col-lg-4 mb-1">
                 <div class="tertiary-project project tertiary-content">
                   <img
-                    src="./assets/images/project-screens/placeholder.png"
+                    src="./assets/images/project-screens/team-generator-sc.png"
                     class="project-image img-fluid"
-                    alt="Smart README Generator screenshot"
+                    alt="Team Profile Generator Screenshot"
                   />
                   <div>
                     <div class="tertiary-overlay">
                       <div class="tertiary-text-heading">
-                        <h5>Smart Readme Generator</h5>
+                        <h5>Team Profile Generator</h5>
                         <div class="tertiary-overlay-text">
-                          A recipe generator that generates recipes based on
-                          user ingredient selections. Users can loren ipsum.
-                          <br /><b>Skills:</b> HTML, CSS. GitHub, JavaScript,
-                          DOM, API.
+                          A node command-line application that generates team
+                          members based on user input. It also uses tests to
+                          debug.
+                          <br /><b>Skills:</b> GitHub, JavaScript, Node, Testing
                         </div>
                         <div class="tertiary-buttons">
                           <a
                             class="visit-page-btn"
-                            href="https://nonebula.github.io/homework11/"
+                            href="https://nonebula.github.io/efficient-team-profile-generator/"
                           >
                             Visit Page
                           </a>
                           <a
                             class="visit-repo-btn"
-                            href="https://github.com/nonebula/homework11"
+                            href="https://github.com/nonebula/efficient-team-profile-generator"
                           >
                             Visit Repo
                           </a>
@@ -607,9 +607,9 @@
                       <div class="quaternary-text-heading">
                         <h5>README Generator</h5>
                         <div class="quaternary-overlay-text">
-                          README Generator to generate READMEs based in
+                          README Generator to generate READMEs based on
                           instructions.
-                          <br /><b>Skills:</b> GitHub, JavaScript, DOM.
+                          <br /><b>Skills:</b> GitHub, JavaScript, Node.
                         </div>
                         <div class="quaternary-buttons">
                           <a
