React Profile SC added

--- a/index.html
+++ b/index.html
@@ -518,30 +518,31 @@
               <div class="col-md-4 col-lg-4 mb-1">
                 <div class="tertiary-project project tertiary-content">
                   <img
-                    src="./assets/images/project-screens/placeholder.png"
+                    src="./assets/images/project-screens/professional-portfolio-sc.png"
                     class="project-image img-fluid"
-                    alt="Homework 12 screenshot"
+                    alt="Professional Portfolio Screenshot"
                   />
                   <div>
                     <div class="tertiary-overlay">
                       <div class="tertiary-text-heading">
-                        <h5>Homework 12</h5>
+                        <h5>Professional React Portfolio</h5>
                         <div class="tertiary-overlay-text">
-                          A recipe generator that generates recipes based on
-                          user ingredient selections. Users can loren ipsum.
+                          A professional portfolio built utilising ReactJS. This
+                          portfolio was used as the model for the portfolio but
+                          built upon using advanced Javascript.
                           <br /><b>Skills:</b> HTML, CSS. GitHub, JavaScript,
-                          DOM, API.
+                          ReactJS.
                         </div>
                         <div class="tertiary-buttons">
                           <a
                             class="visit-page-btn"
-                            href="https://nonebula.github.io/homework12/"
+                            href="https://nonebula.github.io/professional-react-portfolio/"
                           >
                             Visit Page
                           </a>
                           <a
                             class="visit-repo-btn"
-                            href="https://github.com/nonebula/homework12"
+                            href="https://github.com/nonebula/professional-react-portfolio"
                           >
                             Visit Repo
                           </a>
