Image added, README tweaked

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
             <div class="col-lg-2 col-md-3 col-sm-12 mb-3">
               <h2>Featured Project</h2>
             </div>
-            <div class="col-lg-10 col-md-9 col-sm-12">
+            <div class="col-lg-4 col-md-6 col-sm-12 mb-3">
               <div class="primary-project primary-content">
                 <div class="primary-project project-container">
                   <img
@@ -557,7 +557,7 @@
               <div class="col-md-4 col-lg-4 mb-1">
                 <div class="tertiary-project project tertiary-content">
                   <img
-                    src="./assets/images/project-screens/team-generator-sc.png"
+                    src="./assets/images/project-screens/exampleHTMLdisplay.png"
                     class="project-image img-fluid"
                     alt="Team Profile Generator Screenshot"
                   />
